k8s/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecsapi
  labels:
    run: ecsapi
spec:
  type: NodePort
  selector:
    app: ecsapi
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
