k8s/k8s-api.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ecsapi
spec:
  rules:
  - http:
      paths:
      - path: /v1/ecs
        backend:
          serviceName: ecsapi
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ecsapi
  labels:
    app: ecsapi
    tier: api
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port:   '8080'
    prometheus.io/path:   '/v1/ecs/metrics'
spec:
  selector:
    app: ecsapi
    tier: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecsapi
  labels:
    app: ecsapi
    tier: api
spec:
  selector:
    matchLabels:
      app: ecsapi
      tier: api
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ecsapi
        tier: api
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: ecsapi
        image: hub.docker.com/yaleits/ecsapi
        volumeMounts:
        - name: ecsapi-config
          mountPath: "/app/config"
          readOnly: true
        livenessProbe:
          httpGet:
            path: /v1/ecs/ping
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
      volumes:
      - name: ecsapi-config
        secret:
          secretName: ecs-api-config-json
